--- a/index.html
+++ b/index.html
@@ -42,7 +42,27 @@
         </div>
       </nav>
       <!-- Navbar Section Ends -->
-      
+      <section>
+        <div class="banner-container">
+          <div class="banner-text">
+            <h3 class="banner-title">Play Like The</h3>
+            <h2 class="banner-goat">G.O.A.T.</h2>
+            <div class="banner-description">
+              <p><i class="fa-solid fa-play"></i> 1-Click instant play</p>
+              <p><i class="fa-solid fa-download"></i> No Download</p>
+              <p>
+                <i class="fa-solid fa-person"></i> 1000s of supported online
+                games
+              </p>
+            </div>
+            <button class="btn btn-primary">Sign In</button>
+            <button class="btn btn-secondary">Go Rogue</button>
+          </div>
+          <div class="banner-img">
+            <img src="./images/Group 18.png" alt="" />
+          </div>
+        </div>
+      </section>
     </header>
     <!-- Header Section Ends -->
    
