--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
       </section>
     </header>
     <!-- Header Section Ends -->
-   
+    
+ <main>
+    <!-- We are gamer Section Starts -->
+    <section>
+      <div class="gamer-container">
+        <div class="gamer-img">
+          <img src="./images/pngwing 4.png" alt="" />
+        </div>
+        <div class="gamer-text">
+          <h2 class="gamer-title">We are gamer</h2>
+          <p class="gamer-description">
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps
+            growing.
+          </p>
+          <button class="btn btn-primary">know more</button>
+          <p class="banner-subdescription">Our purpose...</p>
+          <h3 class="banner-subtitle">“unleash the gamer in everyone”</h3>
+        </div>
+      </div>
+    </section>
+    <!-- We are gamer Section Ends -->
+  </main>
   </body>
 </html>
