Online game section added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,56 @@
       </div>
     </section>
     <!-- We are gamer Section Ends -->
+    <!-- Online Game Section Starts -->
+    <section>
+        <div class="online-game-text">
+            <h1 class="online-game-title">Online Games <span class="online-game-heilight">Funny Videos</span></h1>
+            <p class="online-game-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="online-game-card-container">
+            <div class="online-game-card">
+                <div class="card-img">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <div class="content"> 
+                        <span><i class="fa-solid fa-play hover-play"></i></span>
+                        <h1>Watch Now</h1>
+                    </div>
+                </div>
+                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="online-game-card">
+                <div class="card-img">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <div class="content"> 
+                        <span><i class="fa-solid fa-play hover-play"></i></span>
+                        <h1>Watch Now</h1>
+                    </div>
+                </div>
+                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="online-game-card">
+                <div class="card-img">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <div class="content"> 
+                        <span><i class="fa-solid fa-play hover-play"></i></span>
+                        <h1>Watch Now</h1>
+                    </div>
+                </div>
+                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="online-game-card">
+                <div class="card-img">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <div class="content"> 
+                        <span><i class="fa-solid fa-play hover-play"></i></span>
+                        <h1>Watch Now</h1>
+                    </div>
+                </div>
+                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Online Game Section Ends -->
   </main>
   </body>
 </html>
