--- a/index.html
+++ b/index.html
@@ -65,79 +65,110 @@
       </section>
     </header>
     <!-- Header Section Ends -->
-    
- <main>
-    <!-- We are gamer Section Starts -->
-    <section>
-      <div class="gamer-container">
-        <div class="gamer-img">
-          <img src="./images/pngwing 4.png" alt="" />
+
+    <main>
+      <!-- We are gamer Section Starts -->
+      <section>
+        <div class="gamer-container">
+          <div class="gamer-img">
+            <img src="./images/pngwing 4.png" alt="" />
+          </div>
+          <div class="gamer-text">
+            <h2 class="gamer-title">We are gamer</h2>
+            <p class="gamer-description">
+              An international digital games and entertainment company. We
+              develop, publish and distribute multiplayer mobile games. We reach
+              over 400 million players each month and our audience keeps
+              growing.
+            </p>
+            <button class="btn btn-primary">know more</button>
+            <p class="banner-subdescription">Our purpose...</p>
+            <h3 class="banner-subtitle">“unleash the gamer in everyone”</h3>
+          </div>
         </div>
-        <div class="gamer-text">
-          <h2 class="gamer-title">We are gamer</h2>
-          <p class="gamer-description">
-            An international digital games and entertainment company. We
-            develop, publish and distribute multiplayer mobile games. We reach
-            over 400 million players each month and our audience keeps
-            growing.
-          </p>
-          <button class="btn btn-primary">know more</button>
-          <p class="banner-subdescription">Our purpose...</p>
-          <h3 class="banner-subtitle">“unleash the gamer in everyone”</h3>
-        </div>
-      </div>
-    </section>
-    <!-- We are gamer Section Ends -->
-    <!-- Online Game Section Starts -->
-    <section>
+      </section>
+      <!-- We are gamer Section Ends -->
+      <!-- Online Game Section Starts -->
+      <section>
         <div class="online-game-text">
-            <h1 class="online-game-title">Online Games <span class="online-game-heilight">Funny Videos</span></h1>
-            <p class="online-game-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+          <h1 class="online-game-title">
+            Online Games <span class="online-game-heilight">Funny Videos</span>
+          </h1>
+          <p class="online-game-description">
+            A Collection of Hilarious Videos to Brighten Your Day
+          </p>
         </div>
         <div class="online-game-card-container">
-            <div class="online-game-card">
-                <div class="card-img">
-                    <img src="./images/Rectangle 4.png" alt="">
-                    <div class="content"> 
-                        <span><i class="fa-solid fa-play hover-play"></i></span>
-                        <h1>Watch Now</h1>
-                    </div>
-                </div>
-                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+          <div class="online-game-card">
+            <div class="card-img">
+              <img src="./images/Rectangle 4.png" alt="" />
+              <div class="content">
+                <span><i class="fa-solid fa-play hover-play"></i></span>
+                <h1>Watch Now</h1>
+              </div>
             </div>
-            <div class="online-game-card">
-                <div class="card-img">
-                    <img src="./images/Rectangle 4.png" alt="">
-                    <div class="content"> 
-                        <span><i class="fa-solid fa-play hover-play"></i></span>
-                        <h1>Watch Now</h1>
-                    </div>
-                </div>
-                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p class="card-description">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="online-game-card">
+            <div class="card-img">
+              <img src="./images/Rectangle 4.png" alt="" />
+              <div class="content">
+                <span><i class="fa-solid fa-play hover-play"></i></span>
+                <h1>Watch Now</h1>
+              </div>
             </div>
-            <div class="online-game-card">
-                <div class="card-img">
-                    <img src="./images/Rectangle 4.png" alt="">
-                    <div class="content"> 
-                        <span><i class="fa-solid fa-play hover-play"></i></span>
-                        <h1>Watch Now</h1>
-                    </div>
-                </div>
-                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p class="card-description">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="online-game-card">
+            <div class="card-img">
+              <img src="./images/Rectangle 4.png" alt="" />
+              <div class="content">
+                <span><i class="fa-solid fa-play hover-play"></i></span>
+                <h1>Watch Now</h1>
+              </div>
             </div>
-            <div class="online-game-card">
-                <div class="card-img">
-                    <img src="./images/Rectangle 4.png" alt="">
-                    <div class="content"> 
-                        <span><i class="fa-solid fa-play hover-play"></i></span>
-                        <h1>Watch Now</h1>
-                    </div>
-                </div>
-                <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p class="card-description">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="online-game-card">
+            <div class="card-img">
+              <img src="./images/Rectangle 4.png" alt="" />
+              <div class="content">
+                <span><i class="fa-solid fa-play hover-play"></i></span>
+                <h1>Watch Now</h1>
+              </div>
             </div>
+            <p class="card-description">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
         </div>
-    </section>
-    <!-- Online Game Section Ends -->
-  </main>
+      </section>
+      <!-- Online Game Section Ends -->
+      <!-- Play Instantly Section Starts -->
+      <section>
+        <div class="instantly-container">
+          <div class="instantly-text">
+            <h3 class="instantly-title"><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h3>
+            <p class="instantly-description">
+              Play games online for free without <br> downloading. Just click the
+              Play button <br> and play instantly in your browser.
+            </p>
+          </div>
+          <div class="instantly-img">
+            <img src="./images/Rectangle 55.png" alt="" />
+            <div class="absolute">
+              <img src="./images/Rectangle 66.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Play Instantly Section Ends -->
+    </main>
   </body>
 </html>
