playy  game section added

--- a/index.html
+++ b/index.html
@@ -154,10 +154,15 @@
       <section>
         <div class="instantly-container">
           <div class="instantly-text">
-            <h3 class="instantly-title"><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h3>
+            <h3 class="instantly-title">
+              <span>Play Instantly,</span> <br />
+              No Downloads <br />
+              No Installs.
+            </h3>
             <p class="instantly-description">
-              Play games online for free without <br> downloading. Just click the
-              Play button <br> and play instantly in your browser.
+              Play games online for free without <br />
+              downloading. Just click the Play button <br />
+              and play instantly in your browser.
             </p>
           </div>
           <div class="instantly-img">
@@ -169,6 +174,32 @@
         </div>
       </section>
       <!-- Play Instantly Section Ends -->
+      <!-- Play Game Container Section Starts -->
+      <section>
+        <div class="play-game-container">
+          <div class="play-game-img">
+            <img src="./images/Rectangle 67.png" alt="" />
+            <div class="absolute">
+              <img src="./images/Rectangle 78.png" alt="" />
+            </div>
+          </div>
+          <div class="play-game-text">
+            <h3 class="play-game-title">
+              <span
+                >Play Games <br />
+                Online</span
+              >
+              Anywhere, <br />
+              Anytime!
+            </h3>
+
+            <p class="play-game-description">
+              PC. dad’s phone, mom’s tablet, or your Chromebook, <br> with Gamer you can play your favorite games online <br> for free, any time, anywhere , on any device.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Play Game Container Section Ends -->
     </main>
   </body>
 </html>
