careers   game section added

--- a/index.html
+++ b/index.html
@@ -194,12 +194,52 @@
             </h3>
 
             <p class="play-game-description">
-              PC. dad’s phone, mom’s tablet, or your Chromebook, <br> with Gamer you can play your favorite games online <br> for free, any time, anywhere , on any device.
+              PC. dad’s phone, mom’s tablet, or your Chromebook, <br />
+              with Gamer you can play your favorite games online <br />
+              for free, any time, anywhere , on any device.
             </p>
           </div>
         </div>
       </section>
       <!-- Play Game Container Section Ends -->
+      <!-- Careers Section Starts -->
+      <section class="careers-section">
+        <div class="careers-container">
+          <div class="careers-text">
+            <h3 class="careers-title">Careers</h3>
+            <p class="careers-description">
+              Gamer is driven to create the best and most fun games for our
+              millions of players all around the world, and we,re always on the
+              lookout for more top talent to join our growing team. If you,d
+              like to help us make great games and be a part of Gamers bright
+              future, we,d love to hear from you.
+            </p>
+            <div class="careers-details-container">
+              <div class="careers-details-left">
+                <p>Multimedia Artist +</p>
+                <p>Data Engineer +</p>
+                <p>Adroid Engineer +</p>
+                <p>Server Developer +</p>
+                <p>Group Financial Accountant +</p>
+                <p>Senior User Acuisition Specialist +</p>
+              </div>
+              <div class="careers-details-right">
+                <p>Lisbon, Portugal</p>
+                <p>Lisbon, Portugal</p>
+                <p>Zoetermeer, Netherlands</p>
+                <p>Lisbon, Portugal</p>
+                <p>London, United Kingdom</p>
+                <p>Lisbon, Portugal</p>
+              </div>
+            </div>
+            <button class="btn btn-primary see-all">See all positions</button>
+          </div>
+          <div class="careers-img">
+            <img src="./images/Group 65.png" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- Careers Section Ends -->
     </main>
   </body>
 </html>
