Game namee section added

--- a/index.html
+++ b/index.html
@@ -235,11 +235,53 @@
             <button class="btn btn-primary see-all">See all positions</button>
           </div>
           <div class="careers-img">
-            <img src="./images/Group 65.png" alt="">
+            <img src="./images/Group 65.png" alt="" />
           </div>
         </div>
       </section>
       <!-- Careers Section Ends -->
+      <!-- Game Name Section Starts -->
+      <section>
+        <div class="game-name-container">
+          <div class="game-name">
+            <img src="./images/Rectangle 11.png" alt="" />
+            <h6 class="game-name-title">Action Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 12.png" alt="" />
+            <h6 class="game-name-title">Adventure Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 13.png" alt="" />
+            <h6 class="game-name-title">Arcade Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 14.png" alt="" />
+            <h6 class="game-name-title">Educational Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 15.png" alt="" />
+            <h6 class="game-name-title">Word Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 16.png" alt="" />
+            <h6 class="game-name-title">Role Palying Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 17.png" alt="" />
+            <h6 class="game-name-title">Music & Audio Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 18.png" alt="" />
+            <h6 class="game-name-title">Puzzle Games</h6>
+          </div>
+          <div class="game-name">
+            <img src="./images/Rectangle 19.png" alt="" />
+            <h6 class="game-name-title">Strategy Games</h6>
+          </div>
+        </div>
+      </section>
+      <!-- Game Name Section Ends -->
     </main>
   </body>
 </html>
