footer section added

--- a/index.html
+++ b/index.html
@@ -283,5 +283,37 @@
       </section>
       <!-- Game Name Section Ends -->
     </main>
+
+    <!-- Footer Starts -->
+    <footer>
+      <div class="footer-container">
+        <img src="./images/Frame.png" alt="" />
+        <h1 class="game-title"><span class="gamer-title-color">G</span>amer</h1>
+      </div>
+      <div class="footer-title">
+        <h6>Our Story</h6>
+        <h6>Games</h6>
+        <h6>Web Games</h6>
+        <h6>Careers</h6>
+        <h6>Support</h6>
+        <h6>My Account</h6>
+      </div>
+      <div class="footer-icons">
+        <span><i class="fa-brands fa-twitter"></i></span>
+        <span><i class="fa-brands fa-facebook"></i></span>
+        <span><i class="fa-brands fa-youtube"></i></span>
+        <span><i class="fa-brands fa-linkedin"></i></span>
+        <span><i class="fa-brands fa-instagram"></i></span>
+        <span><i class="fa-brands fa-apple"></i></span>
+      </div>
+      <div class="footer-description">
+        <p>Terms and Conditions</p>
+        <p>Privacy Policy</p>
+        <p>Cookie Policy</p>
+        <p>Privacy Settings</p>
+      </div>
+      <p class="footer-copy-right">Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</p>
+    </footer>
+    <!-- Footer Ends -->
   </body>
 </html>
