--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               <li><a href="#">Developers</a></li>
               <button class="common">
                 Follow Us On
-                <span><i class="fa-brands fa-youtube"></i></span>
-                <span><i class="fa-brands fa-tiktok"></i></span>
+                <span><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></span>
+                <span><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></span>
               </button>
             </ul>
           </div>
@@ -299,12 +299,12 @@
         <h6>My Account</h6>
       </div>
       <div class="footer-icons">
-        <span><i class="fa-brands fa-twitter"></i></span>
-        <span><i class="fa-brands fa-facebook"></i></span>
-        <span><i class="fa-brands fa-youtube"></i></span>
-        <span><i class="fa-brands fa-linkedin"></i></span>
-        <span><i class="fa-brands fa-instagram"></i></span>
-        <span><i class="fa-brands fa-apple"></i></span>
+        <span><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></span>
+        <span><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
+        <span><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></span>
+        <span><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>
+        <span><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+        <span><a href="https://www.apple.com/" target="_blank"><i class="fa-brands fa-apple"></i></a></span>
       </div>
       <div class="footer-description">
         <p>Terms and Conditions</p>
